# SDSSE

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  SDSSECQ.cpp  SDSSECQS.cpp  SDSSECQSCLI.cpp  VSDSSECQ.cpp  vcpkg.json
.github/workflows/: build.yml
BF/: BloomFilter.cpp  BloomFilter.h
Container/: Dockerfile  docker-compose.yml
Core/: SDSSECQClient.cpp  SDSSECQClient.h  SDSSECQSClient.cpp  SDSSECQSClient.h  SDSSECQSServer.cpp  SDSSECQSServer.h  SDSSECQServer.cpp  SDSSECQServer.h  SSEClientHandler.cpp  SSEClientHandler.h  SSEServerHandler.cpp  SSEServerHandler.h  VSDSSECQClient.cpp  VSDSSECQClient.h  VSDSSECQServer.cpp  VSDSSECQServer.h
Data/: 1984.txt  Evaluation  elliptic_g
GGM/: GGMNode.h  GGMTree.cpp  GGMTree.h
Server/: SSEServerClient.h  SSEServerStandalone.cpp
Test/: AESTest.cpp  BloomFilterTest.cpp  GGMTest.cpp  SM4Test.cpp  SSETest.cpp
Util/: CommonUtil.c  CommonUtil.h
Util/PBC/: G.cc  G.h  G1.cc  G1.h  G2.cc  G2.h  GT.cc  GT.h  PBCExceptions.h  PPPairing.cc  PPPairing.h  Pairing.cc  Pairing.h  Testing  Testing.cc  Zr.cc  Zr.h
